[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/LibreBaskerville-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/import_save_scene.gd" type="Script" id=2]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 34.0
margin_top = 34.0
margin_right = 993.0
margin_bottom = 514.0
custom_fonts/font = SubResource( 1 )
text = "Loading..."
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 36.0
margin_top = 528.0
margin_right = 662.0
margin_bottom = 561.0
custom_fonts/normal_font = SubResource( 2 )
text = "Paste your save here to restore your progress."

[node name="BackButton" type="Button" parent="."]
margin_left = 871.156
margin_top = 540.23
margin_right = 992.156
margin_bottom = 583.23
theme = ExtResource( 3 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportButton" type="Button" parent="."]
margin_left = 709.339
margin_top = 540.23
margin_right = 830.339
margin_bottom = 583.23
theme = ExtResource( 3 )
text = "IMPORT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MergeCheckBox" type="CheckBox" parent="."]
margin_left = 39.0
margin_top = 564.0
margin_right = 539.0
margin_bottom = 591.0
custom_fonts/font = SubResource( 3 )
pressed = true
text = "Merge into current progress (if unchecked, your current progress will be replaced)"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ImportButton" to="." method="_on_import_button_pressed"]
